tests/baselines/reference/parserForOfStatement8.errors.txt
parserForOfStatement8.ts(1,15): error TS2304: Cannot find name 'X'.


==== parserForOfStatement8.ts (1 errors) ====
    for (var v of X) {
                  ~
!!! error TS2304: Cannot find name 'X'.
    }